--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="header__menu">
       <span class="fas fa-bars"></span>
     </div>
-  </header>
+  </header> 
+  <img src="ladder.jpg" alt="Women helping each other">
 
   <h1>National Council Of Women</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error culpa est voluptates eligendi suscipit blanditiis officiis laboriosam rerum reprehenderit?</p>
