--- a/what-we-do.html
+++ b/what-we-do.html
@@ -28,7 +28,7 @@
 
   <h1>What we do page</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum asperiores ipsum repellendus nam iste in perferendis reprehenderit doloremque accusamus nostrum!</p>
-
+  <img src="Four-Areas-of-Inequality.jpg" alt="Four areas of inequality">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="who-we-are.html">Who we are</a></li>
