--- a/who-we-are.html
+++ b/who-we-are.html
@@ -28,7 +28,7 @@
 
   <h1>Who we are page</h1>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis ea ducimus enim similique, aspernatur consectetur beatae fugit repellat. Ipsa, eos!</p>
-
+  <img src="vintage-women.jpeg" alt="women walking">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="who-we-are.html">Who we are</a></li>
