--- a/who-we-are.html
+++ b/who-we-are.html
@@ -25,10 +25,38 @@
       <span class="fas fa-bars"></span>
     </div>
   </header>
-
-  <h1>Who we are page</h1>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis ea ducimus enim similique, aspernatur consectetur beatae fugit repellat. Ipsa, eos!</p>
-  <img src="vintage-women.jpeg" alt="women walking">
+  <img src="women-sign.jpeg" alt="women">
+  <h2>Who we are</h2>
+    <p class="who-we-are">The National Council of Women emerged in 1896 after the successful campaign for women’s suffrage. <br><br>We were set up by our founding President, Kate Sheppard, and prominent leaders of NZ’s suffrage movement, to plan how to use the vote they’d just won for women. They needed to continue to build understanding and drive action to improve the lives of women.
+      Since then, there have been proud shifts in rights for women and gender diverse people, with involvement from many New Zealand community groups and individuals, which brings us to today, and the Gender Equal NZ movement which the National Council of Women is now leading.<br><br>Gender Equal NZ is a digital movement that is tackling the gender stereotypes and 
+      sexist attitudes that persist in Aotearoa New Zealand, and prevent women and gender diverse people from achieving their potential.
+    </p>
+    <img src="kate-sheppard.jpg" alt="women">
+  <h2>Where we came from</h2>
+   <p class="who-we-are"><b>Beginnings: 1896</b><br><br>In 1896 NCWNZ was formed at a women’s convention in Christchurch and Kate Sheppard, who had led the campaign for women’s suffrage, was elected President, an office she held for three years. The International Council of Women (ICW) had been formed in USA in 1888 and it was from this that the New Zealand organisation took its name.
+     Women’s organisations were the members, not individual women.<br><br>From the start, NCWNZ was an advocate on behalf of women in the home and in the workplace, whether vulnerable, or strong and capable. They were concerned about the conditions for women industrial workers so they proposed an eight hour day and a minimum wage. They passed resolutions in favour 
+     of prison reform and against capital punishment. They wanted to raise the age of consent to sexual intercourse from 16 to 18 or even 21 in order to protect young women from sexual diseases, which were rife. One speaker urged equal grounds for divorce for men and women.<br><br>
+     A resolution passed at the first conference was “That in all cases where a woman elects to superintend her own household and to be the mother of children, there shall be a law attaching a just share of her husband’s earnings or income for her separate use, payable if she so desire it, into her separate account.” <br><br>
+     <b>The Early Years: 1896-1906</b><br><br>From 1896-1900 NCWNZ grew in size and influence and in 1899 it became affiliated to ICW. Policy was made through resolutions passed at conferences in the main centres. It was often called the Women’s Parliament. Topics in the first four years included marriage, divorce and the economic independence of women, parental 
+     responsibilities and equal pay for equal work. They protested unequal laws relating to men and women, including women’s inability to become members of Parliament or to hold other public offices.<br><br>Members were united in their desire to work for peace, but when they spoke out against the Boer War in 1900 under president Amey Daldy(1898-1901), there was 
+     strong public disapproval. They achieved considerable success – the government legislated to provide equal male and female grounds for divorce, old age pensions, protection for industrial workers and new adoption laws. The legal profession was opened to women, husbands were required to provide for their wives in their wills and technical schools were to be 
+     established throughout the country.<br><br>Kate Sheppard led a delegation to Prime Minister Seddon to urge women’s rights to sit in parliament, serve as justices of the peace and receive equal pay for equal work. But he told them that women were physically weaker than men, they were too emotional to be justices of the peace and they did not need equal pay 
+     because they would be cared for financially by their husbands.<br><br>From 1900 -1906 NCWNZ lost the thrust of the first four years. The leaders realised that they were out of step with most New Zealand women. Smaller meetings were held in provincial centres, travel was difficult, four leaders had died and others were unwell. And so the decision was made to
+     go into recess. However, many of the women remained active in other organisations such as The Society for the Protection of Women and Children and The Women’s Christian Temperance Union.<br><br>
+     <b>Revival and Restructuring: 1918-1939</b><br><br>During World War I, an initiative to revive NCWNZ came from Kate Sheppard, Christina Henderson and Jessie Mackay in Christchurch. Representatives of women’s organisations from Auckland, Christchurch, Dunedin, Gisborne and Wellington met in Wellington in April 1918. By this time, a quarter of all women were in
+     the work force. The time was right to bring women’s issues to the fore again. Kate was president for a year and was followed by Ellen Melville (1919-23), a lawyer with her own practice who was an Auckland City Councillor for 33 years.<br><br>There was a change of structure. The new NCW established branches around the country. There were eight by 1929 and 14
+     by 1940. In the 1920s and 1930s a large number of women’s organisations were founded and many of them joined NCWNZ branches. This was the start of the nationwide network that is NCWNZ today. Conferences in the 1920s, held every second year from 1925, were brief and practical.<br><br>Increasingly, NCWNZ co-ordinated women’s opinions and relayed them to the 
+     government. New Zealand delegates attended ICW conferences and 17 women attended the first Women’s Pacific Rim Conference in Honolulu in 1928.<br><br>In 1926 the first 17 women Justices of the Peace included Annie Fraer, who became NCWNZ President from 1927-31.<br><br>An article in NCWNZ Bulletin in 1928 listed “What New Zealand Women Want”: women on juries 
+     and the Prisons Board, women police, a woman co-censor of films, a woman member of New Zealand’s delegation to the League of Nations. Concerns included the high death rate of women in childbirth and by septic abortion, equal salaries and status for male and female teachers, improved conditions in schools, and equal pay and promotion in the Civil Service.<br><br>
+     NCWNZ was very aware that New Zealand women were lagging behind the British, who were able to be jurors and members of parliament from 1919; there were 15 British women MPs by 1929. The first New Zealand woman MP was Elizabeth McCombs in 1933. NCWNZ lobbied throughout the 1920’s for the right for women to sit on juries.<br><br>The focus gradually moved from equal
+     rights issues to moral issues such as the compulsory notification of venereal disease, and issues resulting from the Depression. In 1931 the Auckland NCW Branch co-operated with its affiliate, the YWCA, to open a register of unemployed women, the first time they were ever recorded officially. The Christchurch Branch President set up a scheme for teaching cookery to 
+     unemployed girls who produced hundreds of dinners for needy families and the elderly. Dunedin Branch was behind the establishment of a Women’s Unemployment Committee which placed many women in domestic service.<br><br>An issue of particular concern was nationality after marriage. In all Commonwealth countries a woman who married a foreigner took on his nationality 
+     and lost her right to vote, pension rights and the right to diplomatic protection abroad. The 1935 Labour Government restored the right to vote, but could not make any other changes as the whole Commonwealth had not agreed to them.<br><br>
+     <b>World War II: 1939-45</b><br><br>During the war, NCW branches worked locally, with welcome clubs for servicemen, patriotic committees collecting clothing and funds to help victims of war, sewing, knitting and growing food. Dunedin Branch’s suggestion of collecting food for Britain, became a national initiative which resulted in the sending of nearly 70 tons of food.
+     <br><br>In 1944 NCWNZ conference had an important new feature, the attendance of presidents of seven nationally organised societies. This major change meant that from that time NCWNZ could tap into the expertise of those societies and respond to their particular concerns.<br><br>
+     Read more about our fascinating history  in The National Council of Women. A centennial history. By Dorothy Page 1996. Available at most libraries. 
+   </p>
+ 
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="who-we-are.html">Who we are</a></li>
@@ -36,6 +64,14 @@
     <li><a href="get-involved.html">Get involved</a></li>
     <li><a href="donate.html">Donate</a></li>
   </ul>
+ <footer>
+      <div class="footer_social-media">
+        <i class="fab fa-facebook"></i>
+      </div>
+      <div class="footer_social-media">
+        <i class="fab fa-twitter-square"></i>
+      </div>
+</footer>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
