--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <i class="fas fa-bars"></i>
     </div>
   </header> 
-  <img src="images/holding-hands.jpeg" alt="Women helping each other">
+  <img src="images/holding-hands.jpeg" alt="Women holding hands">
 
   <h1>National Council Of Women</h1>
 <div class="blurb-container">
