--- a/who-we-are.html
+++ b/who-we-are.html
@@ -12,6 +12,8 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
@@ -25,13 +27,13 @@
       <span class="fas fa-bars"></span>
     </div>
   </header>
-  <img src="women-sign.jpeg" alt="women">
+  <img src="images/Women-Suffragists.jpg" alt="Women fighting for the right to vote">
   <h2>Who we are</h2>
     <p class="who-we-are">The National Council of Women emerged in 1896 after the successful campaign for women’s suffrage. <br><br>We were set up by our founding President, Kate Sheppard, and prominent leaders of NZ’s suffrage movement, to plan how to use the vote they’d just won for women. They needed to continue to build understanding and drive action to improve the lives of women.
       Since then, there have been proud shifts in rights for women and gender diverse people, with involvement from many New Zealand community groups and individuals, which brings us to today, and the Gender Equal NZ movement which the National Council of Women is now leading.<br><br>Gender Equal NZ is a digital movement that is tackling the gender stereotypes and 
       sexist attitudes that persist in Aotearoa New Zealand, and prevent women and gender diverse people from achieving their potential.
     </p>
-    <img src="kate-sheppard.jpg" alt="women">
+    <img src="images/kate-sheppard.jpg" alt="Kate Sheppard and the women who formed the NCOWNZ">
   <h2>Where we came from</h2>
    <p class="who-we-are"><b>Beginnings: 1896</b><br><br>In 1896 NCWNZ was formed at a women’s convention in Christchurch and Kate Sheppard, who had led the campaign for women’s suffrage, was elected President, an office she held for three years. The International Council of Women (ICW) had been formed in USA in 1888 and it was from this that the New Zealand organisation took its name.
      Women’s organisations were the members, not individual women.<br><br>From the start, NCWNZ was an advocate on behalf of women in the home and in the workplace, whether vulnerable, or strong and capable. They were concerned about the conditions for women industrial workers so they proposed an eight hour day and a minimum wage. They passed resolutions in favour 
@@ -43,7 +45,9 @@
      established throughout the country.<br><br>Kate Sheppard led a delegation to Prime Minister Seddon to urge women’s rights to sit in parliament, serve as justices of the peace and receive equal pay for equal work. But he told them that women were physically weaker than men, they were too emotional to be justices of the peace and they did not need equal pay 
      because they would be cared for financially by their husbands.<br><br>From 1900 -1906 NCWNZ lost the thrust of the first four years. The leaders realised that they were out of step with most New Zealand women. Smaller meetings were held in provincial centres, travel was difficult, four leaders had died and others were unwell. And so the decision was made to
      go into recess. However, many of the women remained active in other organisations such as The Society for the Protection of Women and Children and The Women’s Christian Temperance Union.<br><br>
-     <b>Revival and Restructuring: 1918-1939</b><br><br>During World War I, an initiative to revive NCWNZ came from Kate Sheppard, Christina Henderson and Jessie Mackay in Christchurch. Representatives of women’s organisations from Auckland, Christchurch, Dunedin, Gisborne and Wellington met in Wellington in April 1918. By this time, a quarter of all women were in
+   </p>
+   <img src="images/vintage-women.jpeg" alt="Women walking">
+   <p class="who-we-are"><b>Revival and Restructuring: 1918-1939</b><br><br>During World War I, an initiative to revive NCWNZ came from Kate Sheppard, Christina Henderson and Jessie Mackay in Christchurch. Representatives of women’s organisations from Auckland, Christchurch, Dunedin, Gisborne and Wellington met in Wellington in April 1918. By this time, a quarter of all women were in
      the work force. The time was right to bring women’s issues to the fore again. Kate was president for a year and was followed by Ellen Melville (1919-23), a lawyer with her own practice who was an Auckland City Councillor for 33 years.<br><br>There was a change of structure. The new NCW established branches around the country. There were eight by 1929 and 14
      by 1940. In the 1920s and 1930s a large number of women’s organisations were founded and many of them joined NCWNZ branches. This was the start of the nationwide network that is NCWNZ today. Conferences in the 1920s, held every second year from 1925, were brief and practical.<br><br>Increasingly, NCWNZ co-ordinated women’s opinions and relayed them to the 
      government. New Zealand delegates attended ICW conferences and 17 women attended the first Women’s Pacific Rim Conference in Honolulu in 1928.<br><br>In 1926 the first 17 women Justices of the Peace included Annie Fraer, who became NCWNZ President from 1927-31.<br><br>An article in NCWNZ Bulletin in 1928 listed “What New Zealand Women Want”: women on juries 
