--- a/get-involved.html
+++ b/get-involved.html
@@ -12,6 +12,8 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
@@ -36,6 +38,17 @@
     <li><a href="get-involved.html">Get involved</a></li>
     <li><a href="donate.html">Donate</a></li>
   </ul>
+
+  <footer>
+    <div class="footer_social-media">
+      <i class="fab fa-facebook"></i>
+    </div>
+    <div class="footer_social-media">
+      <i class="fab fa-twitter-square"></i>
+    </div>
+    
+
+</footer>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
