--- a/get-involved.html
+++ b/get-involved.html
@@ -36,12 +36,26 @@
       </div>
     </div>
   </header>
-
+  <img class="hero-image" src="images/member.jpg" alt="Members">
   <div class="container">
-    <h1>Get involved page</h1>
+    <h1>Get involved</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum molestias delectus eum sit laudantium ea? Tempora ipsa inventore beatae dolorum?</p>
-
+    <p>Discrimination can be more subtle than it once was. We see it in our everyday interactions, with subtle gender inequality being revealed in attitudes and assumptions. For some, gender inequality is more obvious.  For all of us, the job is not done.</p>
+    <p>It’s great that you want to get involved, each person involved (even in small ways) helps the cause immensely. We need all New Zealanders to understand the inequalities that exist in our country. We must stop looking the other way and tackle the ways deeply entrenched and widely-held social attitudes are driving growing inequalities in our communities.There are a number of ways you can get involved. </p>
+    <h2>Become a member</h2>
+    <p>We’d love to have you! We are calling on all New Zealanders, on our friends and whānau , to come together and help us make a difference. We need more members to help us hold New Zealand to account.
+      Our members are leading the charge in making equality, reality by standing up against sexism and gender stereotyping.
+      Our members are starting conversations to highlight these attitudes and assumptions – it might be pointing out how damaging a sexist “joke” can be or calling out stereotypes when they hear them. They’re sharing information online and starting and joining conversations on our Facebook page. Members also receive our exclusive monthly newsletter and have the opportunity to be involved in our submission process.
+    </p>
+    <h2>Donate</h2>
+    <p>
+      Every little bit helps. Your donation will help us to build a Gender Equal New Zealand, one where all New Zealanders are valued and diversity is celebrated in our communities.
+      You can help grow and support the Gender Equal NZ movement to make equality a reality by donating. Gender Equal NZ is led the National Council of Women of New Zealand because we care about the experiences of all genders and believe in equality for all.
+    </p>
+    <p>If you are interested in volunteering or partnering with us please email info@genderequal.nz</p>
+    <p>Our partners are making equality, reality. Gender Equal NZ thanks our partners for everything they do to help New Zealand achieve gender equality. If you’re representing an organisation that is interested in joining our movement please email info@genderequal.nz</p>
+    <h2>Engage</h2>
+    <p>Whether you become a member, donate, or volunteer (or none of the above) try to engage in some way. Learn as much as you can. Check out the Gender Dashboard, and the Gender Attitudes Survey. Keep up to date with news. Join the conversation whether at your home/workplace/communities or with us online. </p>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="who-we-are.html">Who we are</a></li>
