image and te reo

--- a/donate.html
+++ b/donate.html
@@ -38,7 +38,8 @@
   </header>
 
   <div class="container">
-    <h1>Donate page</h1>
+    <h1>Donate</h1>
+    <h3 class="Maori">Hei mema</h3>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente deserunt veniam rerum explicabo, a ullam. Ea neque exercitationem quaerat!</p>
 
