--- a/get-involved.html
+++ b/get-involved.html
@@ -39,15 +39,20 @@
   <img class="hero-image" src="images/member.jpg" alt="Members">
   <div class="container">
     <h1>Get involved</h1>
+    <h3 class="Maori">Kia whai waahi</h3>
 
     <p>Discrimination can be more subtle than it once was. We see it in our everyday interactions, with subtle gender inequality being revealed in attitudes and assumptions. For some, gender inequality is more obvious.  For all of us, the job is not done.</p>
     <p>It’s great that you want to get involved, each person involved (even in small ways) helps the cause immensely. We need all New Zealanders to understand the inequalities that exist in our country. We must stop looking the other way and tackle the ways deeply entrenched and widely-held social attitudes are driving growing inequalities in our communities.There are a number of ways you can get involved. </p>
     <h2>Become a member</h2>
+    <h3 class="Maori">Hei mema</h3>
+
+
     <p>We’d love to have you! We are calling on all New Zealanders, on our friends and whānau , to come together and help us make a difference. We need more members to help us hold New Zealand to account.
       Our members are leading the charge in making equality, reality by standing up against sexism and gender stereotyping.
       Our members are starting conversations to highlight these attitudes and assumptions – it might be pointing out how damaging a sexist “joke” can be or calling out stereotypes when they hear them. They’re sharing information online and starting and joining conversations on our Facebook page. Members also receive our exclusive monthly newsletter and have the opportunity to be involved in our submission process.
     </p>
     <h2>Donate</h2>
+    <h3 class="Maori">Hei mema</h3>
     <p>
       Every little bit helps. Your donation will help us to build a Gender Equal New Zealand, one where all New Zealanders are valued and diversity is celebrated in our communities.
       You can help grow and support the Gender Equal NZ movement to make equality a reality by donating. Gender Equal NZ is led the National Council of Women of New Zealand because we care about the experiences of all genders and believe in equality for all.
