--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
     </div>
   </header>
 
-  <img class="hero-image" src="images/holding-hands.jpeg" alt="Women holding hands">
+  <img class="hero-image" src="images/women-cover.jpeg" alt="Women holding hands">
 
   <div class="container">
     <h1>National Council Of Women</h1>
+    <h3 class="Maori">Te Kaunihera Wahine o Aotearoa</h3>
 
     <div class="blurb">
       <div class="icon-container"><i class="fas fa-users icon__user"></i></div>
 
       <h2>Who we are</h2>
+      <h3 class="Maori">Ko wai tatou</h3>
 
       <p class="blurb__paragraph">
         The National Council of Women emerged in 1896 after the successful campaign for women’s suffrage. We were set up by our founding President, Kate Sheppard, and prominent leaders of NZ’s suffrage movement, to plan how to use the vote they’d just won for women. They needed to continue to build understanding and drive action to improve the lives of women.
@@ -60,6 +62,7 @@
       <div class="icon-container"><i class="fas fa-tasks icon__what-we-do"></i></div>
 
       <h2>What we do</h2>
+      <h3 class="Maori">Ka mahi matou</h3>
 
       <p class="blurb__paragraph">
         We are making equality, reality.
@@ -84,6 +87,7 @@
       <div class="icon-container"><i class="fas fa-hands-helping icon__get-involved"></i></div>
 
       <h2>Get involved</h2>
+      <h3 class="Maori">Kia whai waahi</h3>
 
       <p class="blurb__paragraph">
         Our members have the opportunity to contribute to discussion and submissions on policies that impact the opportunities and welfare of women. NCWNZ represents these views to policymakers. Every month, NCWNZ members receive an update on current issues via our newsletter, The Circular. Non-members can subscribe to The Circular for $50 per year.
