--- a/what-we-do.html
+++ b/what-we-do.html
@@ -39,6 +39,7 @@
 
   <div class="container">
     <h1>What we do </h1>
+    <h3 class="Maori">Ka mahi matou</h3>
 
     <div class="blurb">
       <p class="blurb__paragraph">
