--- a/who-we-are.html
+++ b/who-we-are.html
@@ -41,6 +41,7 @@
 
   <div class="container">
     <h2>Who we are</h2>
+    <h3 class="Maori">Ko wai tatou</h3>
 
     <div class="blurb">
       <p class="blurb__paragraph">
@@ -60,6 +61,7 @@
     <img class="article-image" src="images/kate-sheppard.jpg" alt="Kate Sheppard and the women who formed the NCOWNZ">
 
     <h2>Where we came from</h2>
+    <h3 class="Maori">No hea tatou</h3>
 
     <div class="blurb">
       <h3 class="blurb__heading">Beginnings: 1896</h3>
