--- a/who-we-are.html
+++ b/who-we-are.html
@@ -37,6 +37,25 @@
     </div>
   </header>
 
+  <nav class="menu">
+    <div class="menu__close-bar">
+      <i class="fas fa-times"></i>
+    </div>
+
+    <ul class="menu__list">
+      <li class="menu__list-item"><a class="menu__link" href="index.html">Home</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="who-we-are.html">Who we are</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="what-we-do.html">What we do</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="get-involved.html">Get involved</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="donate.html">Donate</a></li>
+    </ul>
+
+    <div class="menu__social-icons">
+      <a href="https://www.facebook.com/ncwnz.org.nz/" target="_blank"><i class="footer__icon fab fa-facebook"></i></a>
+      <a href="https://twitter.com/GenderEqualNZ" target="_blank"><i class="footer__icon fab fa-twitter-square"></i></a>
+    </div>
+  </nav>
+
   <img class="hero-image" src="images/Women-Suffragists.jpg" alt="Women fighting for the right to vote">
 
   <div class="container">
@@ -160,19 +179,11 @@
         Read more about our fascinating history in The National Council of Women. A centennial history. By Dorothy Page 1996. Available at most libraries.
       </p>
     </div>
-
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="who-we-are.html">Who we are</a></li>
-      <li><a href="what-we-do.html">What we do</a></li>
-      <li><a href="get-involved.html">Get involved</a></li>
-      <li><a href="donate.html">Donate</a></li>
-    </ul>
   </div>
 
   <footer class="footer">
-    <i class="footer__icon fab fa-facebook"></i>
-    <i class="footer__icon fab fa-twitter-square"></i>
+    <a href="https://www.facebook.com/ncwnz.org.nz/" target="_blank"><i class="footer__icon fab fa-facebook"></i></a>
+    <a href="https://twitter.com/GenderEqualNZ" target="_blank"><i class="footer__icon fab fa-twitter-square"></i></a>
   </footer>
 
   <!-- jQuery -->
