--- a/donate.html
+++ b/donate.html
@@ -37,24 +37,35 @@
     </div>
   </header>
 
+  <nav class="menu">
+    <div class="menu__close-bar">
+      <i class="fas fa-times"></i>
+    </div>
+
+    <ul class="menu__list">
+      <li class="menu__list-item"><a class="menu__link" href="index.html">Home</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="who-we-are.html">Who we are</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="what-we-do.html">What we do</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="get-involved.html">Get involved</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="donate.html">Donate</a></li>
+    </ul>
+
+    <div class="menu__social-icons">
+      <a href="https://www.facebook.com/ncwnz.org.nz/" target="_blank"><i class="footer__icon fab fa-facebook"></i></a>
+      <a href="https://twitter.com/GenderEqualNZ" target="_blank"><i class="footer__icon fab fa-twitter-square"></i></a>
+    </div>
+  </nav>
+
   <div class="container">
     <h1>Donate</h1>
     <h3 class="Maori">Hei mema</h3>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente deserunt veniam rerum explicabo, a ullam. Ea neque exercitationem quaerat!</p>
-
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="who-we-are.html">Who we are</a></li>
-      <li><a href="what-we-do.html">What we do</a></li>
-      <li><a href="get-involved.html">Get involved</a></li>
-      <li><a href="donate.html">Donate</a></li>
-    </ul>
   </div>
 
   <footer class="footer">
-    <i class="footer__icon fab fa-facebook"></i>
-    <i class="footer__icon fab fa-twitter-square"></i>
+    <a href="https://www.facebook.com/ncwnz.org.nz/" target="_blank"><i class="footer__icon fab fa-facebook"></i></a>
+    <a href="https://twitter.com/GenderEqualNZ" target="_blank"><i class="footer__icon fab fa-twitter-square"></i></a>
   </footer>
 
   <!-- jQuery -->
