--- a/what-we-do.html
+++ b/what-we-do.html
@@ -37,6 +37,25 @@
     </div>
   </header>
 
+  <nav class="menu">
+    <div class="menu__close-bar">
+      <i class="fas fa-times"></i>
+    </div>
+
+    <ul class="menu__list">
+      <li class="menu__list-item"><a class="menu__link" href="index.html">Home</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="who-we-are.html">Who we are</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="what-we-do.html">What we do</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="get-involved.html">Get involved</a></li>
+      <li class="menu__list-item"><a class="menu__link" href="donate.html">Donate</a></li>
+    </ul>
+
+    <div class="menu__social-icons">
+      <a href="https://www.facebook.com/ncwnz.org.nz/" target="_blank"><i class="footer__icon fab fa-facebook"></i></a>
+      <a href="https://twitter.com/GenderEqualNZ" target="_blank"><i class="footer__icon fab fa-twitter-square"></i></a>
+    </div>
+  </nav>
+
   <div class="container">
     <h1>What we do </h1>
     <h3 class="Maori">Ka mahi matou</h3>
@@ -112,20 +131,11 @@
       <div><img src="images/safety.jpg"></div>
       <div><img src="images/education.jpg"></div>
     </div>
-
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="who-we-are.html">Who we are</a></li>
-      <li><a href="what-we-do.html">What we do</a></li>
-      <li><a href="get-involved.html">Get involved</a></li>
-      <li><a href="donate.html">Donate</a></li>
-    </ul>
-
   </div>
 
   <footer class="footer">
-    <i class="footer__icon fab fa-facebook"></i>
-    <i class="footer__icon fab fa-twitter-square"></i>
+    <a href="https://www.facebook.com/ncwnz.org.nz/" target="_blank"><i class="footer__icon fab fa-facebook"></i></a>
+    <a href="https://twitter.com/GenderEqualNZ" target="_blank"><i class="footer__icon fab fa-twitter-square"></i></a>
   </footer>
 
   <!-- jQuery -->
