Add call-to-action buttons

--- a/donate.html
+++ b/donate.html
@@ -58,7 +58,7 @@
 
   <div class="container">
     <h1>Donate</h1>
-    <h3 class="Maori">Hei mema</h3>
+    <h3 class="maori">Hei mema</h3>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente deserunt veniam rerum explicabo, a ullam. Ea neque exercitationem quaerat!</p>
   </div>
