--- a/get-involved.html
+++ b/get-involved.html
@@ -60,7 +60,7 @@
 
   <div class="container">
     <h1>Get involved</h1>
-    <h3 class="Maori">Kia whai waahi</h3>
+    <h3 class="maori">Kia whai waahi</h3>
 
     <div class="blurb">
       <p class="blurb__paragraph">Discrimination can be more subtle than it once was. We see it in our everyday interactions, with subtle gender inequality being revealed in attitudes and assumptions. For some, gender inequality is more obvious.  For all of us, the job is not done.</p>
@@ -68,17 +68,21 @@
     </div>
 
     <h2>Become a member</h2>
-    <h3 class="Maori">Hei mema</h3>
+    <h3 class="maori">Hei mema</h3>
 
     <div class="blurb">
       <p class="blurb__paragraph">We’d love to have you! We are calling on all New Zealanders, on our friends and whānau , to come together and help us make a difference. We need more members to help us hold New Zealand to account.
         Our members are leading the charge in making equality, reality by standing up against sexism and gender stereotyping.
         Our members are starting conversations to highlight these attitudes and assumptions – it might be pointing out how damaging a sexist “joke” can be or calling out stereotypes when they hear them. They’re sharing information online and starting and joining conversations on our Facebook page. Members also receive our exclusive monthly newsletter and have the opportunity to be involved in our submission process.
       </p>
+
+      <div class="blurb__button">
+        <a class="button" href="donate.html">Join</a>
+      </div>
     </div>
 
     <h2>Donate</h2>
-    <h3 class="Maori">Hei mema</h3>
+    <h3 class="maori">Hei mema</h3>
 
     <div class="blurb">
       <p class="blurb__paragraph">
@@ -87,13 +91,10 @@
       </p>
       <p class="blurb__paragraph">If you are interested in volunteering or partnering with us please email info@genderequal.nz</p>
       <p class="blurb__paragraph">Our partners are making equality, reality. Gender Equal NZ thanks our partners for everything they do to help New Zealand achieve gender equality. If you’re representing an organisation that is interested in joining our movement please email info@genderequal.nz</p>
-    </div>
 
-    <h2>Engage</h2>
-    <h3 class="Maori">Tomo</h3>
-
-    <div class="blurb">
-      <p class="blurb__paragraph">Whether you become a member, donate, or volunteer (or none of the above) try to engage in some way. Learn as much as you can. Check out the Gender Dashboard, and the Gender Attitudes Survey. Keep up to date with news. Join the conversation whether at your home/workplace/communities or with us online. </p>
+      <div class="blurb__button">
+        <a class="button" href="donate.html">Donate</a>
+      </div>
     </div>
   </div>
 
