--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
   <div class="container">
     <h1>National Council Of Women</h1>
-    <h3 class="Maori">Te Kaunihera Wahine o Aotearoa</h3>
+    <h3 class="maori">Te Kaunihera Wahine o Aotearoa</h3>
 
     <div class="blurb">
       <div class="icon-container"><i class="fas fa-users icon__user"></i></div>
 
       <h2>Who we are</h2>
-      <h3 class="Maori">Ko wai tatou</h3>
+      <h3 class="maori">Ko wai tatou</h3>
 
       <p class="blurb__paragraph">
         The National Council of Women emerged in 1896 after the successful campaign for women’s suffrage. We were set up by our founding President, Kate Sheppard, and prominent leaders of NZ’s suffrage movement, to plan how to use the vote they’d just won for women. They needed to continue to build understanding and drive action to improve the lives of women.
@@ -78,10 +78,14 @@
         are an umbrella organisation with a volunteer board and 15 branches nationwide. More than 200 organisations, as well as individuals, are members.
       </p>
 
+      <div class="blurb__button">
+        <a href="who-we-are.html" class="button button--with-margin">Learn more</a>
+      </div>
+
       <div class="icon-container"><i class="fas fa-tasks icon__what-we-do"></i></div>
 
       <h2>What we do</h2>
-      <h3 class="Maori">Ka mahi matou</h3>
+      <h3 class="maori">Ka mahi matou</h3>
 
       <p class="blurb__paragraph">
         We are making equality, reality.
@@ -103,10 +107,14 @@
         we are to successfully achieve our vision of a gender equal New Zealand the potential impact is huge – socially, and economically.
       </p>
 
+      <div class="blurb__button ">
+        <a href="what-we-do.html" class="button button--with-margin">Learn more</a>
+      </div>
+
       <div class="icon-container"><i class="fas fa-hands-helping icon__get-involved"></i></div>
 
       <h2>Get involved</h2>
-      <h3 class="Maori">Kia whai waahi</h3>
+      <h3 class="maori">Kia whai waahi</h3>
 
       <p class="blurb__paragraph">
         Our members have the opportunity to contribute to discussion and submissions on policies that impact the opportunities and welfare of women. NCWNZ represents these views to policymakers. Every month, NCWNZ members receive an update on current issues via our newsletter, The Circular. Non-members can subscribe to The Circular for $50 per year.
@@ -119,6 +127,10 @@
       <p class="blurb__paragraph">
         You can also make a donation.We rely on donations, fundraising and grants. Help us take one more step in the road to equality by donating today.
       </p>
+
+      <div class="blurb__button ">
+        <a href="get-involved.html" class="button button--with-margin">Learn more</a>
+      </div>
     </div>
   </div>
 
