--- a/what-we-do.html
+++ b/what-we-do.html
@@ -58,7 +58,7 @@
 
   <div class="container">
     <h1>What we do </h1>
-    <h3 class="Maori">Ka mahi matou</h3>
+    <h3 class="maori">Ka mahi matou</h3>
 
     <div class="blurb">
       <p class="blurb__paragraph">
@@ -123,6 +123,10 @@
         data to build a shared understanding of the status of all women in Aotearoa New Zealand. We work with expert partners to illustrate key areas of inequality from an intersectional perspective. Over the next three years, we will release data stories that illustrate
         gender inequalities in the Four Key Areas of Inequality: Economic Independence, Safety and Health, Education, and Influence and Decision Making. We’re starting with Economic Independence.
       </p>
+
+      <div class="blurb__button ">
+        <a href="get-involved.html" class="button button--with-margin">Join us</a>
+      </div>
     </div>
 
     <div class="infographics">
